Changelog of Jail

Alpha0.3.1
- API updated, should support the latest PocketMine build
- Fixed error message popping when a player who's jailed forever joins
- Fixed player-UUID incorrectly saved

Alpha0.3.0
- Implemented Mining-For-Money-For-Bailing feature! (Tutorial soon)
- Fixed newly joined players all being jailed bug #10
- Fixed console popping errors of isJailed()-error bug #10
- Added support for EconomyPlus (Prisoner bail function)
- Added support for individual jail's bail status(Allow bailing or not)
- Default time unit is now customizable in configuration file
- Implemented sign support: 1st line: [Bail] [ResetMine] [SellHand]
- Fixed some messages not converted from their keys
- Prisoners' gamemode will be set to 0 instead of 2
- Added 'jail.modify.bypass' perm-node (detail in plugin.yml)
- Fixed block-break detection (warning broadcasting issue)
- Fixed player-escape-warning overlapping the timer GUI
- Implemented prisoner inventory saver
- Fixed a word misspell in lang_zh.json
- Database support! (Jails.yml data backup)
Technical updates:
- Code cleanup - Removed unused code
- Added an interface class for Jail's API
- Bumped to PocketMine API 3.0.0-ALPHA1 (Older APIs compatible)
- Different sign types are checked with individual listeners
- Signs positioning technology enhancement
New commands:
- /jailmine set|remove|check|reset <jail>
- /jailsellhand
- /jailresetmine

Alpha0.2.3
- Fixed '/votejail' command not working for normal players
- Added 'jail.uuidcheck.bypass' permission

Alpha0.2.2
- Added an option to disable timer GUI on prisoners in config
- Updated README.md for Github
- Added '/votejail' cmd, allowing players to vote someone who behaves badly
- Fixed loading message of compatible economy plugin
- Fixed /tpjail command and tpJail() not working
- Code cleanup
- Added UUID Checker

Alpha0.2.1
- Added Russian #5
- Redefined language keys
- Added more translatable messages

Alpha0.2
- Added more languages #2
- Various bug fixes
