@@ -1,7 +1,7 @@
 name: Jail
 main: hoyinm14mc\jail\Jail
 api: ["2.0.0", "3.0.0-ALPHA3"]
-version: Alpha0.3.1
+version: Alpha0.3.2
 author: hoyinm14mc
 description: An advanced jail punishment system for PocketMine servers
 load: POSTWORLD
