@@ -68,4 +68,4 @@ sync-LOCALtoDB: false
 
 ### Config version ###
 #Do not modify this, otherwise plugin may not work properly
-v: Alpha0.3.1
+v: Alpha0.3.2
